--- a/Hanselman.iOS/packages.config
+++ b/Hanselman.iOS/packages.config
@@ -65,5 +65,5 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.2.19-beta" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="3.0.0-ci0001" targetFramework="xamarinios10" />
 </packages>
